📄 Change Log for Grade Pal

Last updated: 02 January 2026  
Developer: Luke Baldacchino / Tera Apps  
____________________________________________________________

V 1.1.0 – Minor updates

This is an excited update as we are finally approved to publish the application onto the Play Store. Due to this, this release will come with additional features, and UI/UX improvements.

- Planner added
  - Added a new Planner tab for tracking upcoming study items and key dates.

- Home page
  - UI improved:
    - Colour added per tag
    - Can tag subjects with subject Type
    - Can associate a study type (semester, trimester, term)
    - General UI/UX improvements
  - Can add exempt subject (With or without grade)
  - WAM is now calculated
  - Can only re-order non-completed subjects
    - Completed subjects are fixed in position

- Subject page
  - Auto calculate final exam mark based on final grade
  - Overal UI/UX improvements


____________________________________________________________

V 1.0.4 – Minor updates

- UI update to Home page:
  - Subjects can now be re-ordered via long-press + drag.
  - New first-time tutorial appears when there are no subjects, guiding you to add your first one.
  - New in-app “Enjoying Grade Pal?” review prompt:
    - Links directly to the Play Store to leave a review.
    - “Maybe later” snoozes the reminder for 4 weeks.

- UI update to [subject] page:
  - “Remove subject” action moved to the bottom of the page for clarity.
  - Smooth slide animation when navigating between Home and Subject pages.
  - New subject snapshot banner showing:
    - Accumulated grade so far
    - Remaining weight
    - Possible final grade range
  - New “What do I need to pass?” helper card that explains:
    - Whether you’ve already passed
    - If passing is still possible
    - The average % needed across remaining assessments to reach the pass mark
  - Assessment cards can now be tagged and re-ordered:
    - Type tags: Assignment, Exam, Quiz, Hurdle